--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,21 +87,6 @@ android {
         }
     }
 
-    productFlavors {
-        prod
-        dev {
-            minSdkVersion 21
-        }
-    }
-
-    variantFilter { variant ->
-        if (variant.getFlavors().get(0).name.equals('dev')
-            && (variant.buildType.name.equals('release')
-            || variant.buildType.name.equals('alpha'))) {
-            variant.setIgnore(true);
-        }
-    }
-
     lintOptions {
         abortOnError true
         checkReleaseBuilds false
@@ -204,7 +189,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
     // Android Wear
-    prodWearApp project(':wear')
+    wearApp project(':wear')
 
     // Dependencies for local unit tests
     testCompile "junit:junit:$rootProject.junitVersion"
