--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.0.0-beta4'
+        classpath 'com.android.tools.build:gradle:2.0.0-beta6'
         classpath 'com.google.gms:google-services:1.3.1'
 
         classpath 'io.fabric.tools:gradle:1.21.2'
@@ -54,7 +54,7 @@ ext {
     versionName = "${versionMajor}.${versionMinor}.${versionPatch}"
 
     // Sdk and tools
-    minSdkVersion = 16
+    minSdkVersion = project.hasProperty("minSdk") ? minSdk : 16
     targetSdkVersion = 21
     compileSdkVersion = 23
     buildToolsVersion = '23.0.2'
